src/objects/Knowledge__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>Article_Creator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>look up field for purely front end display on the community site</description>
        <label>Article Creator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Knowledge</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <description>Content of the Technote</description>
        <label>Content</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Dossier_URL__c</fullName>
        <label>Dossier URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>KB_ID__c</fullName>
        <label>KB ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Validation_Status_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User that last changed the Validation Status</description>
        <label>Last Validation Status By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Knowledge_KB_Articles_validation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Validation_Status_Date__c</fullName>
        <description>Date/Time when the Validation Status was last edited</description>
        <label>Last Validation Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Lithium_Author_Email__c</fullName>
        <label>Lithium Author Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lithium_Author__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lithium Author</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Knowledge_TechnoteAuthor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lithium_Board_ID__c</fullName>
        <description>The legacy Lithium board ID, for migrated articles only.</description>
        <label>Lithium Board ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lithium_ID__c</fullName>
        <description>The legacy Lithium ID of this article, for migrated articles only.</description>
        <label>Lithium ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lithium_Labels__c</fullName>
        <description>The legacy Lithium labels assigned to this article, for migrated articles only.</description>
        <label>Lithium Labels</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lithium_Legacy_URL__c</fullName>
        <formula>HYPERLINK(Lithium_URL__c, &quot;Open Lithium Article&quot; ,&quot;_blank&quot;)</formula>
        <label>Lithium Legacy URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lithium_Likes__c</fullName>
        <description>The legacy Lithium number of likes to be used for migrated articles only.</description>
        <label>Lithium Likes</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lithium_Published_Date__c</fullName>
        <label>Lithium Published Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lithium_URL__c</fullName>
        <description>The legacy Lithium URL, for migrated articles only.</description>
        <label>Lithium URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lithium_Views__c</fullName>
        <description>The legacy Lithium number of views, for migrated articles only.</description>
        <label>Lithium Views</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MicroStrategy_Only__c</fullName>
        <description>Internal section of Technical Notes</description>
        <label>MicroStrategy Only</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Moderation_Comments__c</fullName>
        <description>Comments set by the moderator to be referenced in future revisions or to denote archive reasons.</description>
        <label>Moderation Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ReadyForMigration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ReadyForMigration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Technote_Number__c</fullName>
        <formula>&quot;TN&quot;&amp; Lithium_ID__c</formula>
        <label>Technote Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Online help</fullName>
                </value>
                <value>
                    <fullName>PDF</fullName>
                </value>
                <value>
                    <fullName>SDK Documentation</fullName>
                </value>
                <value>
                    <fullName>API Reference</fullName>
                </value>
                <value>
                    <fullName>Press Release</fullName>
                </value>
                <value>
                    <fullName>Presentation</fullName>
                </value>
                <value>
                    <fullName>Blog</fullName>
                </value>
                <value>
                    <fullName>Announcement</fullName>
                </value>
                <value>
                    <fullName>Certification</fullName>
                </value>
                <value>
                    <fullName>Code Sample</fullName>
                </value>
                <value>
                    <fullName>Code Snippets</fullName>
                </value>
                <value>
                    <fullName>Course</fullName>
                </value>
                <value>
                    <fullName>Customer Story</fullName>
                </value>
                <value>
                    <fullName>Dashboard</fullName>
                </value>
                <value>
                    <fullName>Data Samples</fullName>
                </value>
                <value>
                    <fullName>Data Source Connector</fullName>
                </value>
                <value>
                    <fullName>Demo</fullName>
                </value>
                <value>
                    <fullName>MicroLearning</fullName>
                </value>
                <value>
                    <fullName>Plugins</fullName>
                </value>
                <value>
                    <fullName>Samplet</fullName>
                </value>
                <value>
                    <fullName>Solution Brief</fullName>
                </value>
                <value>
                    <fullName>Visualization</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <description>MicroStrategy version family that this article applies to.</description>
        <inlineHelpText>MicroStrategy version family that this article applies to.</inlineHelpText>
        <label>Version</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2021 Update 2 (August 2021)</fullName>
                </value>
                <value>
                    <fullName>2021 Update 2</fullName>
                </value>
                <value>
                    <fullName>2021 Update 1</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2020 Update 5</fullName>
                </value>
                <value>
                    <fullName>2020 Update 4</fullName>
                </value>
                <value>
                    <fullName>2020 Update 3</fullName>
                </value>
                <value>
                    <fullName>2020 Update 2</fullName>
                </value>
                <value>
                    <fullName>2020 Update 1</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2019 Update 8</fullName>
                </value>
                <value>
                    <fullName>2019 Update 7</fullName>
                </value>
                <value>
                    <fullName>2019 Update 6</fullName>
                </value>
                <value>
                    <fullName>2019 Update 5</fullName>
                </value>
                <value>
                    <fullName>2019 Update 4</fullName>
                </value>
                <value>
                    <fullName>2019 Update 3</fullName>
                </value>
                <value>
                    <fullName>2019 Update 2</fullName>
                </value>
                <value>
                    <fullName>2019 Update 1</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>11.0</fullName>
                </value>
                <value>
                    <fullName>10.11</fullName>
                </value>
                <value>
                    <fullName>10.10</fullName>
                </value>
                <value>
                    <fullName>10.9</fullName>
                </value>
                <value>
                    <fullName>10.8</fullName>
                </value>
                <value>
                    <fullName>10.7</fullName>
                </value>
                <value>
                    <fullName>10.6</fullName>
                </value>
                <value>
                    <fullName>10.5</fullName>
                </value>
                <value>
                    <fullName>10.4</fullName>
                </value>
                <value>
                    <fullName>10.3</fullName>
                </value>
                <value>
                    <fullName>10.2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Video_URL__c</fullName>
        <label>Video URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>is_Lithium_Author__c</fullName>
        <formula>IF(Lithium_Author__r.Id = $User.Id ,TRUE,FALSE)</formula>
        <label>is Lithium Author</label>
        <type>Checkbox</type>
    </fields>
    <label>Knowledge</label>
    <listViews>
        <fullName>archived_articles</fullName>
        <columns>TITLE</columns>
        <columns>ABSTRACT</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>LANGUAGE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>3</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <label>Archived Articles</label>
    </listViews>
    <listViews>
        <fullName>draft_articles</fullName>
        <columns>TITLE</columns>
        <columns>ABSTRACT</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>LANGUAGE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Knowledge__kav.Example</value>
        </filters>
        <label>Draft Articles</label>
    </listViews>
    <listViews>
        <fullName>published_articles</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>RECORDTYPE</columns>
        <columns>ABSTRACT</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <label>Published Articles</label>
    </listViews>
    <pluralLabel>Knowledge</pluralLabel>
    <recordTypes>
        <fullName>Blog</fullName>
        <active>true</active>
        <label>Blog</label>
    </recordTypes>
    <recordTypes>
        <fullName>Course</fullName>
        <active>true</active>
        <label>Course</label>
    </recordTypes>
    <recordTypes>
        <fullName>Documentation</fullName>
        <active>true</active>
        <label>Documentation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Example</fullName>
        <active>true</active>
        <label>Example</label>
    </recordTypes>
    <recordTypes>
        <fullName>KBArticle</fullName>
        <active>true</active>
        <label>KB Article</label>
    </recordTypes>
    <recordTypes>
        <fullName>KB_Article_Video</fullName>
        <active>true</active>
        <label>KB Article Video</label>
    </recordTypes>
    <recordTypes>
        <fullName>Topic_Homepage</fullName>
        <active>true</active>
        <label>Topic_Homepage</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tutorial</fullName>
        <active>true</active>
        <label>Tutorial</label>
    </recordTypes>
    <validationRules>
        <fullName>Prevent_Url_name_from_changing</fullName>
        <active>true</active>
        <description>Preventing url name from changing if published</description>
        <errorConditionFormula>AND(OR(IsVisibleInPkb,PRIORVALUE(IsVisibleInPkb )), ISCHANGED( UrlName))</errorConditionFormula>
        <errorMessage>This article is customer facing, so url changes are not permitted.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>urlName_Greater_Than_166</fullName>
        <active>false</active>
        <description>Urlname field cannot be longer than 166 characters due to internal Salesforce known issues - https://success.salesforce.com/issues_view?title=in-a-community-articles-with-very-long-urls-don-t-load-for-guest-users&amp;Id=a1p3A000000JWkt</description>
        <errorConditionFormula>LEN( UrlName ) &gt;166</errorConditionFormula>
        <errorMessage>Url Name cannot exceed 166 characters due to Salesforce Limitation for guest profile viewing. Please fix the Url Name field.</errorMessage>
    </validationRules>
</CustomObject>